# dbt_commerce_schema

./: .gitignore  .user.yml  README.md  create_ecommerce_tables.sql  dbt_project.yml  pyproject.toml
models/: commerce_schema.yml
utils/: README.md  erd.md  json_to_schema.py  main.py  mermaid_to_json.py  schema_to_tables.py
